# mlops-crispdm-ci-cd

./: Dockerfile  README.md  advanced_spam_models.ipynb  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
src/mlops_crispdm/: business.py  cli.py  data_preparation.py  data_understanding.py  deployment.py  evaluation.py  modeling.py  spam_dataset_es.csv
